# limix-legacy

./: .gitignore  pyproject.toml  setup.py
cython/lmm_forest/: SplittingCore.pyx
limix_legacy/: __init__.py
limix_legacy/deprecated/: core.py
limix_legacy/deprecated/io/: data_util.py  plink.py
limix_legacy/deprecated/modules/: dirIndirVD_commented_forDistrib.py  grm.py  lmm_fast.py  mixedForestUtils.py  panama.py  parMixedForest.py  pySplittingCore.py  qtl.py  social_data_HSmice_paper.py  varianceDecomposition.py
limix_legacy/deprecated/stats/: fdr.py  pca.py
limix_legacy/deprecated/utils/: fastlmm.py  plot.py  preprocess.py
limix_legacy/ensemble/: blup.py  lmm_fast.py  lmm_forest.py  lmm_forest_utils.py  par_lmm_forest.py  py_splitting_core.py
limix_legacy/io/: conversion.py  data.py  data_util.py  genotype_reader.py  phenotype_reader.py
limix_legacy/modules/: BLUP.py  lmm_forest.py  lmmlasso.py  mixedForestUtils.py  multiPanama.py  parMixedForest.py  qtl.py  varDecompSet.py
limix_legacy/stats/: geno_summary.py
limix_legacy/test/: data.py  test_modules.py
limix_legacy/test/covar/: covar.py  test_combinators.py  test_freeform.py  test_lik.py  test_linear.py  test_se.py
limix_legacy/test/gp/: test_gp.py  test_gplvm.py
limix_legacy/test/lmm/: test_CInteractLMM.py  test_CKroneckerLMM.py  test_CLMM.py  test_CLMM_large.py
limix_legacy/test/lmm_forest/: test_lmm_forest.py
limix_legacy/test/lmm_lasso/: test_lmmlasso.py
limix_legacy/utils/: eigen.py  linalg.py  plot.py  preprocess.py  svd_utils.py  util_functions.py
(+1 files in other folders)
